fix: fix email for mailer + fix CV download on server + fix it worksapce not working + add style to dashboard

--- a/Eashire/modules/dashboard/views/components/DashboardCalendarItem.handlebars
+++ b/Eashire/modules/dashboard/views/components/DashboardCalendarItem.handlebars
@@ -1,9 +1,24 @@
-<div class="basis-1/3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex flex-col gap-6">
-  <div class="w-1/5 h-1/5 mx-auto flex">
-    <a href="/calendar" class="w-fit m-auto">
-      <button class="group relative h-fit p-2 rounded-full bg-indigo-700 drop-shadow-lg shadow-indigo-900">
-        {{> calendar-day-solid class='h-10 w-10 fill-cyan-900 group-hover:h-12 group-hover:w-12'}}
-      </button>
-    </a>
+<div class="basis-1/3 rounded-md bg-sky-600 dark:bg-cyan-700 shadow-lg shadow-blue-600/50 dark:shadow-cyan-700/50 flex flex-col gap-6">
+  <div class="grow w-fit p-8 mx-auto flex flex-col">
+    <div class="basis-1/4 flex items-center justify-center">
+      <a href="/calendar" class="w-fit m-auto">
+        <button class="group relative h-fit p-2 rounded-full bg-sky-700 dark:bg-cyan-800 drop-shadow-lg shadow-blue-700 dark:shadow-cyan-800">
+          {{> calendar-day-solid class='h-10 w-10 fill-sky-900 dark:fill-cyan-100 group-hover:h-12 group-hover:w-12'}}
+        </button>
+      </a>
+    </div>
+    <div class="basis-3/4 flex flex-col gap-4">
+      <div class="grow p-2 rounded-md md:text-3xl md:font-bold text-cyan-100 dark:text-cyan-100 flex justify-center items-center">
+        <p>
+          {{today.day}} {{today.dayNumber}}
+        </p>
+      </div>
+      <div class="grow p-2 rounded-md md:text-5xl md:font-bold text-cyan-100 dark:text-cyan-100 flex justify-center items-center">
+        {{today.month}}
+      </div>
+      <div class="grow p-2 rounded-md md:text-3xl md:font-bold text-cyan-100 dark:text-cyan-100 flex justify-center items-center">
+        {{today.year}}
+      </div>
+    </div>
   </div>
 </div>
