--- a/Eashire/modules/dashboard/views/components/DashboardUserItem.handlebars
+++ b/Eashire/modules/dashboard/views/components/DashboardUserItem.handlebars
@@ -1,19 +1,23 @@
-<div class="basis-1/3 rounded-md bg-sky-600 dark:bg-cyan-700 shadow-lg shadow-blue-600/50 dark:shadow-cyan-700/50 flex flex-col gap-6 justify-center items-center">
-    <a href="dashboard/employee" class="h-fit">
-        <button class="group relative h-fit p-2 rounded-full bg-sky-700 dark:bg-cyan-800 drop-shadow-lg shadow-blue-700 dark:shadow-cyan-800">
-            {{> user-circle-solid class='h-10 w-10 fill-sky-900 dark:fill-cyan-100 group-hover:h-12 group-hover:w-12'}}
-        </button>
-    </a>
-    <div class="flex flex-col gap-2">
-        <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center"></p>
-        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-100 whitespace-pre-line text-center">Bonjour, {{user.displayName}}</p>
-    </div>
-    <div class="flex flex-col gap-2">
-        <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center">Votre poste actuel :</p>
-        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.jobTitle}}</p>
-    </div>
-    <div class="flex flex-col gap-2">
-        <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center">Vous êtes chez nous depuis :</p>
-        <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">{{userInfos.employeeHireDate}}</p>
+<div class="basis-1/3 rounded-md bg-sky-600 dark:bg-cyan-700 shadow-lg shadow-blue-600/50 dark:shadow-cyan-700/50 flex flex-col gap-6">
+    <div class="grow w-fit p-8 mx-auto flex flex-col">
+        <div class="basis-1/4 flex items-center justify-center">
+            <a href="dashboard/employee" class="w-fit m-auto">
+                <button class="group relative h-fit p-2 rounded-full bg-sky-700 dark:bg-cyan-800 drop-shadow-lg shadow-blue-700 dark:shadow-cyan-800">
+                    {{> user-circle-solid class='h-10 w-10 fill-sky-900 dark:fill-cyan-100 group-hover:h-12 group-hover:w-12'}}
+                </button>
+            </a>
+        </div>
+        <div class="basis-3/4 flex flex-col gap-4">
+            <div class="flex flex-col gap-2">
+                <p class="relative md:text-sm md:font-bold text-sky-950 dark:text-cyan-100 whitespace-pre-line text-center"></p>
+                <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-100 whitespace-pre-line text-center">👋 Bonjour, <p class="relative md:text-5xl md:font-bold text-cyan-100 dark:text-cyan-100 whitespace-pre-line text-center">{{user.displayName}}</p></p>
+            </div>
+            <div class="flex flex-col gap-2">
+                <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">💼 {{userInfos.jobTitle}}</p>
+            </div>
+            <div class="flex flex-col gap-2">
+                <p class="relative md:text-xl md:font-bold text-cyan-100 dark:text-cyan-50 whitespace-pre-line text-center">⌛ {{userInfos.employeeHireDate}}</p>
+            </div>
+        </div>
     </div>
 </div>
