--- a/Eashire/modules/dashboard/views/dashboard.handlebars
+++ b/Eashire/modules/dashboard/views/dashboard.handlebars
@@ -1,10 +1,42 @@
 <div class='flex flex-col h-5/6 gap-6 p-6'>
-    <div class='basis-1/3 flex'>
-        <div class="basis-1/3"></div>
-        {{>DashboardWorkspaceItem}}
-        <div class="basis-1/3"></div>
-    </div>
-    <div class='basis-2/3 flex gap-6'>
+    {{#if rh}}
+        <div class='basis-1/3 flex'>
+            <div class="basis-1/3"></div>
+                {{>DashboardWorkspaceItem}}
+            <div class="basis-1/3"></div>
+        </div>
+        <div class='basis-2/3 flex gap-6'>
+    {{else}}
+        {{#if manager}}
+            <div class='basis-1/3 flex'>
+                <div class="basis-1/3"></div>
+                    {{>DashboardWorkspaceItem}}
+                <div class="basis-1/3"></div>
+            </div>
+            <div class='basis-2/3 flex gap-6'>
+        {{else}}
+            {{#if finance}}
+                <div class='basis-1/3 flex'>
+                    <div class="basis-1/3"></div>
+                        {{>DashboardWorkspaceItem}}
+                    <div class="basis-1/3"></div>
+                </div>
+                <div class='basis-2/3 flex gap-6'>
+            {{else}}
+                {{#if it}}
+                    <div class='basis-1/3 flex'>
+                        <div class="basis-1/3"></div>
+                            {{>DashboardWorkspaceItem}}
+                        <div class="basis-1/3"></div>
+                    </div>
+                    <div class='basis-2/3 flex gap-6'>
+                {{else}}
+                    <div class='grow h-5/6 flex gap-6'>
+                {{/if}}
+            {{/if}}
+        {{/if}}
+    {{/if}}
+    
         {{>DashboardUserItem}}
         <div class="basis-1/3 flex flex-col gap-6">
             {{>DashboardRessourcesItem}}
