--- a/Eashire/public/stylesheets/style.css
+++ b/Eashire/public/stylesheets/style.css
@@ -2482,6 +2482,11 @@ input:checked + .toggle-bg {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
