--- a/Eashire/modules/home/views/components/AuthHome.handlebars
+++ b/Eashire/modules/home/views/components/AuthHome.handlebars
@@ -3,7 +3,7 @@
 </button>
 
 <div class="w-fit m-auto mt-4">
-    <h1 class="text-5xl font-semibold">Bienvenue à cette soutenance GPE !</h1>
+    <h1 class="text-5xl font-semibold">Bienvenue {{user.displayName}} 👋</h1>
 </div>
 
 <div class="w-full mt-16">
