--- a/Eashire/modules/home/views/components/WelcomeMessage.handlebars
+++ b/Eashire/modules/home/views/components/WelcomeMessage.handlebars
@@ -1,29 +1,46 @@
-<div class="flex flex-row">
-    <div class="grow w-fit p-14">
-        <div class="text-xl font-medium">
-      Qu'allez vous retrouver ici :</br></br>
-      <li>
-        Vos documents administratifs
-      </li>
-      <li>
-        De la documentation pour vous lancer dans votre nouveau poste
-      </li>
-      <li>
-        Votre équipe qui sont vos collègues
-      </li>
-      <li>
-        Les récapitulatifs de vos EAP
-      </li>
-      <li>
-        Les ressources entreprises
-      </li>
-      <li>
-        Le contact de votre Buddy
-      </li>
-      <li>
-        Les pauses café
-      </li>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eashire</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
+<body class="bg-blue-50 h-screen flex justify-center items-center flex-col">
+
+<h1 class="text-2xl font-bold mb-10 ml-12">Qu'allez-vous retrouver ici :</h1>
+
+<div class="flex flex-row flex-wrap items-start mb-4 max-w-5xl ml-12">
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mb-4 mr-4">
+        <i class="fas fa-file-alt text-grey-300 dark:text-blue-500 text-2xl"></i>
+        <span>Vos documents administratifs</span>
     </div>
-  </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mr-4">
+        <i class="fas fa-book text-grey-300 dark:text-blue-500 text-2xl"></i>
+        <span>De la documentation pour vous lancer dans votre nouveau poste</span>
+    </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mb-4 mr-4">
+        <i class="fas fa-users text-grey-300 dark:text-blue-500 text-2xl"></i>
+        <span>Votre équipe qui sont vos collègues</span>
+    </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mb-4 mr-4">
+        <i class="fas fa-clipboard text-grey-300 dark:text-blue-500 text-2xl"></i>
+        <span>Les récapitulatifs de vos EAP</span>
+    </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mb-4 mr-4">
+        <i class="fas fa-briefcase text-gray-600 dark:text-blue-500 text-2xl"></i>
+        <span>Les ressources entreprises</span>
+    </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mb-4 mr-4">
+        <i class="fas fa-user-friends text-gray-600 dark:text-blue-500 text-2xl"></i>
+        <span>Le contact de votre Buddy</span>
+    </div>
+    <div class="flex items-center space-x-4 p-5 bg-white dark:bg-gray-700 rounded-xl shadow-md mr-4">
+        <i class="fas fa-coffee text-gray-600  dark:text-blue-500 text-2xl"></i>
+        <span>Les pauses café</span>
+    </div>
 </div>
 
+</body>
+</html>
