--- a/Eashire/modules/ressources/views/ressourcesRecentPage.handlebars
+++ b/Eashire/modules/ressources/views/ressourcesRecentPage.handlebars
@@ -6,11 +6,11 @@
   <div class="my-4 w-fit m-auto">
     {{>linkButton3-small href=ressourceCreateLink title='Uploader une ressource' svg="arrow-up-tray-outline" svg_class="h-5 w-5"}}
   </div>
-  <div class='grow p-4 bg-slate-800 rounded-lg border shadow-md sm:p-6'>
+  <div class='grow p-4 bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md sm:p-6'>
     <ul class='my-4 space-y-3'>
       {{#each resourceArray}}
         <li class="flex flex-row gap-6">
-          <a href="{{this.fileLink}}" target="_blank" class="flex-1 flex items-center p-3 text-base font-bold text-white bg-gray-600 rounded-lg hover:bg-gray-500 group hover:shadow">
+          <a href="{{this.fileLink}}" target="_blank" class="flex-1 flex items-center p-3 text-base font-bold text-black dark:text-white bg-gray-200 dark:bg-gray-600 rounded-lg hover:bg-gray-500 group hover:shadow">
             {{#if this.even}}
               {{>clipboard-document-check-solid}}
             {{else}}
