--- a/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
+++ b/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
@@ -2,23 +2,23 @@
   {{>PageHeader header_text="Création d'un dossier de recrutement"}}
 </div>
 <div class='flex flex-row gap-4 p-6'>
-  <div class='basis-1/4 p-4 max-w-2xl bg-slate-800 rounded-lg border shadow-md sm:p-8 h-fit'>
+  <div class='basis-1/4 p-4 max-w-2xl bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md sm:p-8 h-fit'>
     <h1 class="text-xl font-semibold text-center">Ajouter des fichiers au dossier de recrutement</h1>
     <form action={{createDossierLink}} method="post">
       <div class='relative z-0 mb-6 mt-6 w-full group'>
         <label for='new_fichier_recrutement_title'
-          class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Nom
+          class='peer-focus:font-medium absolute text-sm text-gray-800 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Nom
           du fichier demandé</label>
         <input type='text' id='new_fichier_recrutement_title' name='new_fichier_recrutement_title'
-          class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
+          class='block py-2.5 px-0 w-full text-sm text-black dark:text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
           required />
       </div>
 
       <div class='relative z-0 mb-6 mt-6 w-full group'>
         <label for="new_fichier_recrutement_description"
-          class="block mb-2 text-sm font-medium text-gray-400">Description du fichier demandé</label>
+          class="block mb-2 text-sm font-medium text-gray-800 dark:text-gray-400">Description du fichier demandé</label>
         <textarea id="new_fichier_recrutement_description" name="new_fichier_recrutement_description" rows="5" cols="33"
-          class="block p-2.5 w-full text-sm text-white bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400"
+          class="block p-2.5 w-full text-sm text-black dark:text-white bg-gray-200 dark:bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400"
           placeholder="Ecrivez ici la description de l'emploi..." required></textarea>
       </div>
 
@@ -27,14 +27,14 @@
       </div>
     </form>
   </div>
-  <div class='grow pl-4 pb-4 pr-4 pt-0 w-1/4 bg-slate-800 rounded-lg border shadow-md'>
+  <div class='grow pl-4 pb-4 pr-4 pt-0 w-1/4 bg-slate-300 dark:bg-slate-800 rounded-lg border shadow-md'>
     <div class="w-fit m-auto mt-6">
       <h1 class="text-xl font-semibold text-center">Contenu du dossier</h1>
     
       <form action={{sendMailLink}} method="post">
       
          <button id="envoyer-mail-button" type="submit"
-            class="flex items-center p-3 text-sm w-fit m-auto font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-400 group hover:shadow">
+            class="flex items-center p-3 text-sm w-fit m-auto mt-4 font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-400 group hover:shadow">
           <span class="ml-2 flex-1 whitespace-nowrap">Envoyer le dossier de recrutement</span>
          </button>
       </form>
@@ -42,7 +42,7 @@
     </div>
     <ul class="flex place-content-around flex-wrap gap-4 mt-4">
       {{#each fichierRecrutement}}
-      <li class="p-4 bg-slate-800 min-w-[40%] max-w-[40%] h-fit rounded-lg border shadow-md sm:p-8">
+      <li class="p-4 bg-slate-200 dark:bg-slate-800 min-w-[40%] max-w-[40%] h-fit rounded-lg border shadow-md sm:p-8">
         <div class="flex flex-col justify-between content-between">
           <div class="w-fit m-auto">
             <h1 class="text-xl font-semibold text-center break-all">{{this.title}}</h1>
