--- a/Eashire/modules/ressources/views/ressourceCreatePage.handlebars
+++ b/Eashire/modules/ressources/views/ressourceCreatePage.handlebars
@@ -4,13 +4,13 @@
 <div class="flex flex-row m-10 gap-4">
   <div class="basis-1/3 flex-col" id="left">
     <div id="users-dropdown" class="flex-1 relative dropdown">
-      <button class="dropdown-button relative flex items-center justify-between px-2 py-1 text-xl font-bold">
+      <button class="dropdown-button text-gray-600 dark:text-gray-300 relative flex items-center justify-between px-2 py-1 text-xl font-bold">
         Partager à un utilisateur
         <span class="arrow transform rotate-0 transition-transform duration-300">&#9662;</span>
       </button>
-      <div class="dropdown-content left-0 mt-1 ml-3 max-h-[40vh] overflow-y-auto hidden">
+      <div class="dropdown-content text-gray-600 dark:text-gray-300 left-0 mt-1 ml-3 max-h-[40vh] overflow-y-auto hidden">
         {{#each userArray}}
-          <p class="user-option py-1 px-2 m-2 cursor-pointer rounded-md hover:bg-slate-600" data-id="{{this.id}}">
+          <p class="user-option text-gray-600 dark:text-gray-300 py-1 px-2 m-2 cursor-pointer rounded-md hover:bg-slate-600" data-id="{{this.id}}">
             👤 {{this.displayName}}
           </p>
         {{/each}}
@@ -18,13 +18,13 @@
     </div>
 
     <div id="groups-dropdown" class="flex-1 relative dropdown">
-      <button class="dropdown-button relative flex items-center justify-between px-2 py-1 text-xl font-bold">
+      <button class=" text-gray-600 dark:text-gray-300 dropdown-button relative flex items-center justify-between px-2 py-1 text-xl font-bold">
         Groupes
         <span class="arrow transform rotate-0 transition-transform duration-300">&#9662;</span>
       </button>
-      <div class="dropdown-content left-0 mt-1 ml-3 max-h-[40vh] overflow-y-auto hidden">
+      <div class="dropdown-content text-gray-600 dark:text-gray-300 left-0 mt-1 ml-3 max-h-[40vh] overflow-y-auto hidden">
         {{#each groupArray}}
-          <p class="group-option py-1 px-2 m-2 cursor-pointer rounded-md hover:bg-slate-600" data-id="{{this.id}}">
+          <p class="group-option text-gray-600 dark:text-gray-300 py-1 px-2 m-2 cursor-pointer rounded-md hover:bg-slate-600" data-id="{{this.id}}">
             👥 {{this.displayName}}
           </p>
         {{/each}}
@@ -39,17 +39,17 @@
     <div class="flex flex-row items-center mt-4 w-fit">
       <div class="flex flex-col justify-center px-4 w-fit">
         <label for="ressource-name" class="block mb-2 text-sm font-medium text-white">Nom de la ressource</label>
-        <input type="text" id="ressource-name" name="ressource-name" class="block p-2.5 w-80 text-sm text-white bg-gray-700 rounded-lg border border-gray-600 placeholder-gray-400 focus:ring-blue-500 focus:border-blue-500" placeholder="Ecrivez le nom de la ressource ici..." required/>
+        <input type="text" id="ressource-name" name="ressource-name" class="block p-2.5 w-80 text-sm text-black dark:text-white bg-slate-300 dark:bg-gray-700 rounded-lg border border-gray-600 placeholder-gray-400 focus:ring-blue-500 focus:border-blue-500" placeholder="Ecrivez le nom de la ressource ici..." required/>
       </div>
     </div>
     <div class="flex flex-row place-content-center items-center mt-4">
       <div class="grow flex flex-col justify-center px-4">
         <label class="block mb-2 text-sm font-medium text-white" for="file_input">Uploader le fichier</label>
-        <input class="block w-full text-sm text-gray-400 border border-gray-600 rounded-lg cursor-pointer bg-gray-700 focus:outline-none placeholder-gray-400" id="file_input" name="file_input" type="file" required>
+        <input class="block w-full text-sm text-gray-400 border border-gray-600 rounded-lg cursor-pointer bg-gray-200 dark:bg-gray-700 focus:outline-none placeholder-gray-400" id="file_input" name="file_input" type="file" required>
       </div>
     </div>
     <div class="px-4 mt-4 overflow-y-auto max-h-[40vh]">
-      <p class="text-xl font-bold">Partager la ressource avec :</p>
+      <p class=" text-gray-600 dark:text-gray-300 text-xl font-bold">Partager la ressource avec :</p>
       <div id="right" class="pl-3">
       </div>
     </div>
